add eslint and airbnb eslint configuration

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "lint": "eslint --quiet --ext .jsx --ext .js web/static/js/**; exit 0"
+  },
   "repository": {},
   "dependencies": {
     "babel-brunch": "~6.0.0",
@@ -12,5 +15,12 @@
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "uglify-js-brunch": "~1.7.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.5.0",
+    "eslint-config-airbnb": "^11.1.0",
+    "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.2.2"
   }
 }
