--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "babel-brunch": "~6.0.0",
     "babel-preset-react": "^6.11.1",
-    "brunch": "~2.1.3",
+    "brunch": "~2.2.3",
     "clean-css-brunch": "~1.8.0",
     "css-brunch": "~1.7.0",
     "javascript-brunch": "~1.8.0",
@@ -14,6 +14,8 @@
     "phoenix_html": "file:deps/phoenix_html",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
     "uglify-js-brunch": "~1.7.0"
   },
   "devDependencies": {
