--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "uglify-js-brunch": "~1.7.0"
   },
   "devDependencies": {
