--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "eslint-config-airbnb": "^11.1.0",
     "eslint-plugin-import": "^1.15.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.2.2"
+    "eslint-plugin-react": "^6.2.2",
+    "postcss-brunch": "^2.0.3",
+    "postcss-cssnext": "^2.8.0",
+    "postcss-font-magician": "^1.4.0",
+    "postcss-utilities": "^0.4.0",
+    "stylelint": "^7.2.0"
   }
 }
