--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean-css-brunch": "~1.8.0",
     "css-brunch": "~1.7.0",
     "javascript-brunch": "~1.8.0",
+    "normalize.css": "^4.2.0",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
     "react": "^15.3.1",
@@ -27,6 +28,7 @@
     "postcss-brunch": "^2.0.3",
     "postcss-cssnext": "^2.8.0",
     "postcss-font-magician": "^1.4.0",
+    "postcss-import": "^8.1.2",
     "postcss-utilities": "^0.4.0",
     "stylelint": "^7.2.0"
   }
