--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "postcss-cssnext": "^2.8.0",
     "postcss-font-magician": "^1.4.0",
     "postcss-import": "^8.1.2",
+    "postcss-scss": "^0.3.0",
     "postcss-utilities": "^0.4.0",
+    "precss": "^1.4.0",
     "stylelint": "^7.2.0"
   }
 }
