--- a/.stylelintrc
+++ b/.stylelintrc
@@ -3,9 +3,8 @@
     "at-rule-empty-line-before": [ "always", {
       except: [
         "blockless-after-same-name-blockless",
-        "first-nested",
       ],
-      ignore: ["after-comment"],
+      ignore: ["after-comment", "all-nested"]
     } ],
     "at-rule-name-case": "lower",
     "at-rule-name-space-after": "always-single-line",
