--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "babel-brunch": "~6.0.0",
     "babel-preset-react": "^6.11.1",
     "brunch": "~2.2.3",
+    "canvg-origin": "^1.0.0",
     "clean-css-brunch": "~1.8.0",
     "css-brunch": "~1.7.0",
+    "file-saver": "^1.3.2",
     "javascript-brunch": "~1.8.0",
     "normalize.css": "^4.2.0",
     "phoenix": "file:deps/phoenix",
