--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
+    "snapsvg": "^0.4.0",
     "uglify-js-brunch": "~1.7.0"
   },
   "devDependencies": {
