--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel-brunch": "~6.0.0",
     "babel-preset-react": "^6.11.1",
+    "blueimp-canvas-to-blob": "^3.3.0",
     "brunch": "~2.2.3",
     "canvg-origin": "^1.0.0",
     "clean-css-brunch": "~1.8.0",
