--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,8 +8,12 @@
       "jsx": true
     }
   },
+  "globals": {
+    "mina": true
+  },
   "rules": {
     "react/require-extension": "off",
-    "class-methods-use-this": 0
+    "class-methods-use-this": 0,
+    "new-cap": ["error", { "capIsNewExceptions": ["Snap"] }]
   }
 }
