--- a/package.json
+++ b/package.json
@@ -16,20 +16,6 @@
     "normalize.css": "^4.2.0",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "react-redux": "^4.4.5",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0",
-    "snapsvg": "^0.4.0",
-    "uglify-js-brunch": "~1.7.0"
-  },
-  "devDependencies": {
-    "eslint": "^3.5.0",
-    "eslint-config-airbnb": "^11.1.0",
-    "eslint-plugin-import": "^1.15.0",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.2.2",
     "postcss-brunch": "^2.0.3",
     "postcss-cssnext": "^2.8.0",
     "postcss-font-magician": "^1.4.0",
@@ -37,6 +23,20 @@
     "postcss-scss": "^0.3.0",
     "postcss-utilities": "^0.4.0",
     "precss": "^1.4.0",
-    "stylelint": "^7.2.0"
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
+    "snapsvg": "^0.4.0",
+    "stylelint": "^7.2.0",
+    "uglify-js-brunch": "~1.7.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.5.0",
+    "eslint-config-airbnb": "^11.1.0",
+    "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.2.2"
   }
 }
