Add google analytics
To have a better idea of how the site is being
used add in google analytics.

We also manually track when a screenshot is generated.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
     }
   },
   "globals": {
-    "mina": true
+    "mina": true,
+    "ga": true
   },
   "rules": {
     "react/require-extension": "off",
