--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "postcss-scss": "^0.3.0",
     "postcss-utilities": "^0.4.0",
     "precss": "^1.4.0",
-    "react": "^15.3.1",
+    "react": "^15.3.2",
+    "react-copy-to-clipboard": "^4.2.3",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
