--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "css-brunch": "~1.7.0",
     "file-saver": "^1.3.2",
     "javascript-brunch": "~1.8.0",
+    "moment": "^2.15.2",
     "normalize.css": "^4.2.0",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
